--- a/work/index.html
+++ b/work/index.html
@@ -120,42 +120,25 @@ setTimeout(ldinsp, 0);
 <div class="page">
 	<div class="content">
 		<div class="project front third first">
-	<a href="propella-app/index.html">
+	<a href="../../work/propella-app">
 			<h2>Propella e-bike app</h2>
 			<p>Bluetooth connected stats & maintenance tracking</p>
 			<img src="../images/shot-propella.png">
 	</a>
-</div><div class="project front third ">
-	<a href="stock-news/index.html">
-			<h2>Stock Exposè</h2>
-			<p>Stock news and portfolio tracker</p>
-			<img src="../images/stock-news/stock-news.png">
-	</a>
-</div><div class="project front third last">
-	<a href="kwall-dashboard/index.html">
-			<h2>KWALL Client Dashboards</h2>
-			<p>For client project transparency & communication</p>
-			<img src="../images/kwall-dash/dashboard-cover.png">
-	</a>
 </div><div class="project front third">
-	<a href="oxy/index.html">
-			<h2>Occidental College</h2>
-			<p>Web redesign for increased admissions & usability</p>
-			<img src="../images/oxy/oxy-cover.png">
+	<a href="../../work/comic-scouts">
+			<h2>Comic Scouts</h2>
+			<p>Crowdsourced comic book discovery app</p>
+			<img src="../images/comics/shot-comics.png">
 	</a>
-</div><div class="project front third">
-	<a href="energy-care/index.html">
+<div class="project front third last">
+	<a href="../../work/energy-care">
 		<h2>Energy app</h2>
 		<p>Inform medical facilities on how they use energy</p>
 		<img src="../images/energy/shot-energy.png">
 	</a>
-</div><div class="project front third last">
-	<a href="caltech/index.html">
-			<h2>Caltech website redesign</h2>
-			<p>Large website redesign and design system</p>
-			<img src="../images/caltech/shot-caltech.png">
-	</a>
 </div>
+
 		
 		<h2>Cool websites I've worked on</h2>
 		<ul class="website-list">
