--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ setTimeout(ldinsp, 0);
 			<h2>Comic Scouts</h2>
 			<p>Crowdsourced comic book discovery app</p>
 			<img src="../images/comics/shot-comics.png">
-	</a>
+	</a></div>
 <div class="project front third last">
 	<a href="../../work/energy-care">
 		<h2>Energy app</h2>
