--- a/index.html
+++ b/index.html
@@ -123,26 +123,25 @@ setTimeout(ldinsp, 0);
 </div>
 
 <div class="projects">
-<div class="project front third first">
-	<a href="../../work/propella-app">
+	<div class="project front third first">	
+	<a href="work/propella-app/index.html">
 			<h2>Propella e-bike app</h2>
 			<p>Bluetooth connected stats & maintenance tracking</p>
-			<img src="../images/shot-propella.png">
+			<img src="images/shot-propella.png">
 	</a>
 </div><div class="project front third">
-	<a href="../../work/comic-scouts">
-			<h2>Comic Scouts</h2>
-			<p>Crowdsourced comic book discovery app</p>
-			<img src="../images/comics/shot-comics.png">
-	</a></div>
-<div class="project front third last">
-	<a href="../../work/energy-care">
+	<a href="work/oxy/index.html">
+			<h2>Occidental College</h2>
+			<p>Web redesign for increased admissions & usability</p>
+			<img src="images/oxy/oxy-cover.png">
+	</a>
+</div><div class="project front third last">
+	<a href="work/energy-care/index.html">
 		<h2>Energy app</h2>
 		<p>Inform medical facilities on how they use energy</p>
-		<img src="../images/energy/shot-energy.png">
+		<img src="images/energy/shot-energy.png">
 	</a>
 </div>
-
 </div>
 
 <div class="page">
