--- a/index.html
+++ b/index.html
@@ -130,16 +130,16 @@ setTimeout(ldinsp, 0);
 			<img src="images/shot-propella.png">
 	</a>
 </div><div class="project front third">
-	<a href="work/oxy/index.html">
-			<h2>Occidental College</h2>
-			<p>Web redesign for increased admissions & usability</p>
-			<img src="images/oxy/oxy-cover.png">
-	</a>
-</div><div class="project front third last">
 	<a href="work/energy-care/index.html">
 		<h2>Energy app</h2>
 		<p>Inform medical facilities on how they use energy</p>
 		<img src="images/energy/shot-energy.png">
+	</a>
+</div><div class="project front third last">
+	<a href="work/stock-news/index.html">
+			<h2>Stock Exposè</h2>
+			<p>Stock news and portfolio tracker</p>
+			<img src="images/stock-news/stock-news.png">
 	</a>
 </div>
 </div>
