--- a/work/index.html
+++ b/work/index.html
@@ -119,23 +119,23 @@ setTimeout(ldinsp, 0);
 
 <div class="page">
 	<div class="content">
-		<div class="project front third first">
-	<a href="../../work/propella-app">
+	<div class="project front third first">	
+	<a href="work/propella-app/index.html">
 			<h2>Propella e-bike app</h2>
 			<p>Bluetooth connected stats & maintenance tracking</p>
-			<img src="../images/shot-propella.png">
+			<img src="images/shot-propella.png">
 	</a>
 </div><div class="project front third">
-	<a href="../../work/comic-scouts">
-			<h2>Comic Scouts</h2>
-			<p>Crowdsourced comic book discovery app</p>
-			<img src="../images/comics/shot-comics.png">
-	</a>
-<div class="project front third last">
-	<a href="../../work/energy-care">
+	<a href="work/energy-care/index.html">
 		<h2>Energy app</h2>
 		<p>Inform medical facilities on how they use energy</p>
-		<img src="../images/energy/shot-energy.png">
+		<img src="images/energy/shot-energy.png">
+	</a>
+</div><div class="project front third last">
+	<a href="work/stock-news/index.html">
+			<h2>Stock Exposè</h2>
+			<p>Stock news and portfolio tracker</p>
+			<img src="images/stock-news/stock-news.png">
 	</a>
 </div>
 
