--- a/work/index.html
+++ b/work/index.html
@@ -123,19 +123,19 @@ setTimeout(ldinsp, 0);
 	<a href="work/propella-app/index.html">
 			<h2>Propella e-bike app</h2>
 			<p>Bluetooth connected stats & maintenance tracking</p>
-			<img src="images/shot-propella.png">
+			<img src="../images/shot-propella.png">
 	</a>
 </div><div class="project front third">
 	<a href="work/energy-care/index.html">
 		<h2>Energy app</h2>
 		<p>Inform medical facilities on how they use energy</p>
-		<img src="images/energy/shot-energy.png">
+		<img src="../images/energy/shot-energy.png">
 	</a>
 </div><div class="project front third last">
 	<a href="work/stock-news/index.html">
 			<h2>Stock Exposè</h2>
 			<p>Stock news and portfolio tracker</p>
-			<img src="images/stock-news/stock-news.png">
+			<img src="../images/stock-news/stock-news.png">
 	</a>
 </div>
 
