--- a/index.html
+++ b/index.html
@@ -123,11 +123,30 @@ setTimeout(ldinsp, 0);
 </div>
 
 <div class="projects">
-	<div class="project front third first">	
+	<div class="project front third first">
+	<a href="work/caltech/index.html">
+			<h2>Caltech website redesign</h2>
+			<p>Large website redesign and design system</p>
+			<img src="images/caltech/shot-caltech.png">
+	</a>
+</div><div class="project front third ">
+	
 	<a href="work/propella-app/index.html">
 			<h2>Propella e-bike app</h2>
 			<p>Bluetooth connected stats & maintenance tracking</p>
 			<img src="images/shot-propella.png">
+	</a>
+</div><div class="project front third last">
+	<a href="work/kwall-dashboard/index.html">
+			<h2>KWALL Client Dashboards</h2>
+			<p>For client project transparency & communication</p>
+			<img src="images/kwall-dash/dashboard-cover.png">
+	</a>
+</div><div class="project front third">
+	<a href="work/oxy/index.html">
+			<h2>Occidental College</h2>
+			<p>Web redesign for increased admissions & usability</p>
+			<img src="images/oxy/oxy-cover.png">
 	</a>
 </div><div class="project front third">
 	<a href="work/energy-care/index.html">
