--- a/about/index.html
+++ b/about/index.html
@@ -125,7 +125,7 @@ setTimeout(ldinsp, 0);
 			
 		</div>
 		
-		<p class="intro-copy editorial" style="text-align: center;">I'm Brett Anderson, based in Orange County, California. I'm currently working as a Sr. Product Designer at <a target="_blank" rel="noreferrer" href="https://sideinc.com">Side</a>, designing products that empower real estate agents to do their work better. I have the great fortune of teaching the Internet Design 1 class at <a target="_blank" rel="noreferrer" href="https://lcad.edu">Laguna College of Art + Design (LCAD)</a>. I graduated from LCAD and was known as the web guy. I have a passion for creating unique designs for my clients and want to present them in a way that's not something you can find off the shelf.
+		<p class="intro-copy editorial" style="text-align: center;">I'm Brett Anderson, based in Orange County, California. Currently working as a Sr. Product Designer at <a target="_blank" rel="noreferrer" href="https://sideinc.com">Side</a>, designing products that empower real estate agents to do their work better. I have the great fortune of teaching the Internet Design 1 class at <a target="_blank" rel="noreferrer" href="https://lcad.edu">Laguna College of Art + Design (LCAD)</a>. I graduated from LCAD and was known as the web guy. I have a passion for creating unique designs for my clients and want to present them in a way that's not something you can find off the shelf.
 		</p>
 		<br>
 		<hr>
