--- a/work/energy-care/index.html
+++ b/work/energy-care/index.html
@@ -221,7 +221,7 @@ setTimeout(ldinsp, 0);
 			<p>You can also check out the video here created in ProtoPie and the full <a target="_blank" href="https://cloud.protopie.io/p/0d980580e9/1?ui=false&amp;mockup=true&amp;touchHint=false&amp;scaleToFit=false&amp;cursorType=touch">prototype ></a></p>
 			</div><div class="third last" style="text-align: center;">
 				<video width="100%" style="max-width: 280px; border-radius: 32px;" controls>
-				  <source src="http://brettanderson.design/files/energy-app-animations.mp4" type="video/mp4">
+				  <source src="../../files/energy-app-animations.mp4" type="video/mp4">
 				  <source src="../../files/energy-app-animations.ogg" type="video/ogg">
 				  Your browser does not support HTML video.
 				</video>
