--- a/work/wedding-book/index.html
+++ b/work/wedding-book/index.html
@@ -185,7 +185,7 @@ setTimeout(ldinsp, 0);
 		
 			<h2 class="editorial">See Full Book Layout</h2>
 			<div style="height: 500px; margin: 0 auto; margin-bottom: 40px;"><div data-configid="1255002/68714766" style="width:100%; height:500px;" class="issuuembed"></div></div>
-<script type="text/javascript" src="http://e.issuu.com/embed.js" async="true"></script>
+<script type="text/javascript" src="https://e.issuu.com/embed.js" async="true"></script>
 			<p class="editorial">Book was printed through <a target="_blank" rel="noreferrer" href="https://blurb.com">Blurb</a>, large lay-flat photo book. Great quality, highly recommended.</p>
 
 			<h2 class="editorial">Lessons Learned</h2>
