--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@ setTimeout(ldinsp, 0);
 
 <div id="header">
 	<div class="content">
-		<h1>Web and mobile app designer for <br>start-ups & universities.</h1>
+		<h1>Web and mobile app designer</h1>
 		
-		<p>Designer diven by the possibilities that software & design systems can have in creating unique experiences. An educator for 6+ years at the Laguna College of Art + Design teaching the next generation of designers.</p> 
+		<p>Diven by the possibilities that software & design systems can have in creating unique experiences. An educator for 6+ years at the Laguna College of Art + Design teaching the next generation of designers.</p> 
 		<p>Let's chat: <a href="mailto:brettdesigner@gmail.com">brettdesigner@gmail.com</a></p>
 		<br class="no-mobile">
 		<hr>
