--- a/index.html
+++ b/index.html
@@ -124,6 +124,25 @@ setTimeout(ldinsp, 0);
 
 <div class="projects">
 	<div class="project front third first">
+		<a href="#">
+				<h2>Side Design System</h2>
+				<p>Design system rebuild and implementation</p>
+				<img src="images/caltech/shot-caltech.png">
+		</a>
+	</div><div class="project front third ">
+		
+		<a href="#">
+				<h2>Side Website Platform</h2>
+				<p>Partner website management platform</p>
+				<img src="images/shot-propella.png">
+		</a>
+	</div><div class="project front third last">
+		<a href="work/kwall-dashboard/index.html">
+				<h2>KWALL Client Dashboards</h2>
+				<p>For client project transparency & communication</p>
+				<img src="images/kwall-dash/dashboard-cover.png">
+		</a>
+	</div><div class="project front third first">
 	<a href="work/caltech/index.html">
 			<h2>Caltech website redesign</h2>
 			<p>Large website redesign and design system</p>
@@ -137,28 +156,10 @@ setTimeout(ldinsp, 0);
 			<img src="images/shot-propella.png">
 	</a>
 </div><div class="project front third last">
-	<a href="work/kwall-dashboard/index.html">
-			<h2>KWALL Client Dashboards</h2>
-			<p>For client project transparency & communication</p>
-			<img src="images/kwall-dash/dashboard-cover.png">
-	</a>
-</div><div class="project front third">
-	<a href="work/oxy/index.html">
-			<h2>Occidental College</h2>
-			<p>Web redesign for increased admissions & usability</p>
-			<img src="images/oxy/oxy-cover.png">
-	</a>
-</div><div class="project front third">
 	<a href="work/energy-care/index.html">
 		<h2>Energy app</h2>
 		<p>Inform medical facilities on how they use energy</p>
 		<img src="images/energy/shot-energy.png">
-	</a>
-</div><div class="project front third last">
-	<a href="work/stock-news/index.html">
-			<h2>Stock Exposè</h2>
-			<p>Stock news and portfolio tracker</p>
-			<img src="images/stock-news/stock-news.png">
 	</a>
 </div>
 </div>
