Case study images

--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@ setTimeout(ldinsp, 0);
 		<a href="#">
 				<h2>Side Design System</h2>
 				<p>Design system rebuild and implementation</p>
-				<img src="images/caltech/shot-caltech.png">
+				<img src="images/shot-side-ds.png">
 		</a>
 	</div><div class="project front third ">
 		
 		<a href="#">
 				<h2>Side Website Platform</h2>
 				<p>Partner website management platform</p>
-				<img src="images/shot-propella.png">
+				<img src="images/shot-side-websites.png">
 		</a>
 	</div><div class="project front third last">
 		<a href="work/kwall-dashboard/index.html">
