--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@ setTimeout(ldinsp, 0);
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-	  <meta name="description" content="My name is Brett Anderson. I turn ideas into wonderful things. Art direction, graphic design, and web development.">
+	  <meta name="description" content="Brett Anderson. Web and mobile app designer diven by the possibilities that software & design systems can have in creating unique experiences.">
 	  <meta name="keywords" content="brett anderson, creative director, book design, ui designer, ux designer, ui/ux, product designer, logo design, design, website design, web design, designer brands, graphics">
 	
 		<!-- Google / Search Engine Tags -->
 		<meta itemprop="name" content="Brett Anderson">
-		<meta itemprop="description" content="My name is Brett Anderson. I turn ideas into wonderful things. Art direction, graphic design, and web development.">
+		<meta itemprop="description" content="Brett Anderson. Web and mobile app designer diven by the possibilities that software & design systems can have in creating unique experiences.">
 		<meta itemprop="image" content="">
 		
 		<!-- Facebook Meta Tags -->
 		<meta property="og:url" content="http://brettanderson.design">
 		<meta property="og:type" content="website">
 		<meta property="og:title" content="Brett Anderson">
-		<meta property="og:description" content="My name is Brett Anderson. I turn ideas into wonderful things. Art direction, graphic design, and web development.">
+		<meta property="og:description" content="Brett Anderson. Web and mobile app designer diven by the possibilities that software & design systems can have in creating unique experiences.">
 		<meta property="og:image" content="">
 		
 		<!-- Twitter Meta Tags -->
 		<meta name="twitter:card" content="summary_large_image">
 		<meta name="twitter:title" content="Brett Anderson">
-		<meta name="twitter:description" content="My name is Brett Anderson. I turn ideas into wonderful things. Art direction, graphic design, and web development.">
+		<meta name="twitter:description" content="Brett Anderson. Web and mobile app designer diven by the possibilities that software & design systems can have in creating unique experiences.">
 		<meta name="twitter:image" content="">
 		
 		<!-- Global site tag (gtag.js) - Google Analytics -->
