--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ setTimeout(ldinsp, 0);
 	<div class="content">
 		<h1>Web and mobile app designer</h1>
 		
-		<p>Diven by the possibilities that software & design systems can have in creating unique experiences. An educator for 6+ years at the Laguna College of Art + Design teaching the next generation of designers.</p> 
+		<p>Driven by the possibilities that software & design systems can have in creating unique experiences. An educator for 6+ years at the Laguna College of Art + Design teaching the next generation of designers.</p> 
 		<p>Let's chat: <a href="mailto:brettdesigner@gmail.com">brettdesigner@gmail.com</a></p>
 		<br class="no-mobile">
 		<hr>
